ES|QL: Add TBUCKET function
Replace evaluation by a surrogate.

Closes #131068